[gd_scene load_steps=7 format=3 uid="uid://dppqh4byyikh3"]

[ext_resource type="FontFile" uid="uid://c5wn7e7y8po0d" path="res://fonts/Kenney Pixel.ttf" id="1_48c2t"]
[ext_resource type="Script" uid="uid://ckt2lpxa8hbi3" path="res://scenes/hud/hud.gd" id="1_cgeww"]

[sub_resource type="LabelSettings" id="LabelSettings_cgeww"]
font = ExtResource("1_48c2t")
font_size = 72
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c45xl"]
font = ExtResource("1_48c2t")
font_size = 72
font_color = Color(0.00784314, 1, 0.752941, 1)
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_48c2t"]
font = ExtResource("1_48c2t")
font_size = 106
font_color = Color(1, 0.752941, 0.00784314, 1)
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0bx4p"]
font = ExtResource("1_48c2t")
font_size = 72
font_color = Color(0.752941, 0.00784314, 1, 1)
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cgeww")

[node name="CurrentFPSLabel" type="Label" parent="."]
offset_left = 80.0
offset_top = 80.0
offset_right = 287.0
offset_bottom = 134.0
text = "FPS: 0000"
label_settings = SubResource("LabelSettings_cgeww")
vertical_alignment = 1

[node name="AverageFPSLabel" type="Label" parent="."]
offset_left = 80.0
offset_top = 160.0
offset_right = 120.0
offset_bottom = 183.0
text = "Average: 0000"
label_settings = SubResource("LabelSettings_c45xl")
vertical_alignment = 1

[node name="ModeLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -241.0
offset_top = 80.0
offset_right = -70.0
offset_bottom = 191.0
grow_horizontal = 0
text = "POOLING
MODE"
label_settings = SubResource("LabelSettings_48c2t")
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
offset_left = 80.0
offset_top = 240.0
offset_right = 197.0
offset_bottom = 294.0
text = "Time: 00:00"
label_settings = SubResource("LabelSettings_0bx4p")
vertical_alignment = 1
